A fix to long string values by using truncate and word breaks.

--- a/app/global/static/flaskcon.css
+++ b/app/global/static/flaskcon.css
@@ -88,7 +88,7 @@
 }
 
 .breadcrumbs {
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding-bottom: 1rem;
     padding-left: 1rem;
 }
